Mobile tweaks and minor fixes

--- a/static/style.css
+++ b/static/style.css
@@ -9,6 +9,13 @@ body{
 footer{
   /* transform:translateY(-100%) */
 }
+footer a{
+  color:white;
+  text-decoration: underline;
+}
+footer a:hover{
+  color:#ff3300 !important;
+}
 .container-fluid{
   max-width:1200px;
 }
@@ -25,7 +32,10 @@ footer{
 }
 @media screen and (max-width:600px) {
   .container-fluid{
-    padding:0 15px;
+    padding:0;
+  }
+  .container-fluid .row{
+    margin:0;
   }
 }
 .d-absolute{
@@ -323,4 +333,30 @@ h6{
   font-size:.9rem;
   margin-top:15px;
   margin-bottom:0;
+}
+.bmc-button img{height: 34px !important;width: 35px !important;margin-bottom: 1px !important;box-shadow: none !important;border: none !important;vertical-align: middle !important;}.bmc-button{padding: 7px 10px 7px 10px !important;line-height: 35px !important;height:51px !important;min-width:217px !important;text-decoration: none !important;display:inline-flex !important;color:#FFFFFF !important;background-color:#FF813F !important;border-radius: 5px !important;border: 1px solid transparent !important;padding: 7px 10px 7px 10px !important;font-size: 22px !important;letter-spacing: 0.6px !important;box-shadow: 0px 1px 2px rgba(190, 190, 190, 0.5) !important;-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;margin: 0 auto !important;font-family:'Cookie', cursive !important;-webkit-box-sizing: border-box !important;box-sizing: border-box !important;-o-transition: 0.3s all linear !important;-webkit-transition: 0.3s all linear !important;-moz-transition: 0.3s all linear !important;-ms-transition: 0.3s all linear !important;transition: 0.3s all linear !important;}.bmc-button:hover, .bmc-button:active, .bmc-button:focus {-webkit-box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;text-decoration: none !important;box-shadow: 0px 1px 2px 2px rgba(190, 190, 190, 0.5) !important;opacity: 0.85 !important;color:#FFFFFF !important;}
+
+@media screen and (max-width:600px){
+  .mobile-w-100{
+    width:100%;
+    padding:0;
+  }
+  .mobile-no-child-padding > div{
+    padding:0;
+  }
+  .mobile-no-padding{
+    padding:0;
+  }
+  .mobile-pl{
+    padding-left:15px !important;
+  }
+  .mobile-pr{
+    padding-right:15px !important;
+  }
+  .mobile-w-100 .col{
+    padding:0;
+  }
+  .card-body{
+    padding:15px;
+  }
 }
